# IPFS-meta-portfolio

./: .gitignore  Cargo.toml  Dockerfile  README.md  index.md  pyproject.toml
app/engine/: router.py  server.py
app/ui/: render.rs
data/: metadata.json
mint/: metadata.json  mintMETAP.sol
test/: test_server.py
web/: package-lock.json  package.json
web/public/: terminal.htm  terminal.html
web/public/pkg/: ipfs_meta_portfolio.d.ts  ipfs_meta_portfolio.js  ipfs_meta_portfolio_bg.js  ipfs_meta_portfolio_bg.wasm  ipfs_meta_portfolio_bg.wasm.d.ts
web/src/: App.tsx  index.css
