[package]
name = "ipfs-meta-portfolio"
version = "0.1.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.reqwest]
version = "0.11"
features = ["json"]

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "HtmlElement",
  "Window",
  "console",
  "EventTarget",
  "MouseEvent",
  "HtmlInputElement"
]

[lib]
crate-type = ["cdylib", "rlib"]
path = "app/ui/render.rs"