[project]
name = "IPFS-meta-portfolio"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "ssghost", email = "ssprof0@gmail.com"},
]
dependencies = ["chromadb>=1.5.4", "langchain>=1.2.10", "langchain-core>=1.2.17", "onnxruntime==1.23.2", "fastapi>=0.135.1", "uvicorn>=0.41.0", "pydantic>=2.12.5"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
